@@ -234,23 +234,23 @@ shared_examples_for 'an adapter the provides #cohort' do
         sfo = model.where(f_t[:dest].eq('SFO'))
         ord.projections = [Arel.star]
         sfo.projections = [Arel.star]
-        Flight.find_by_sql("SELECT * FROM #{Arel::Nodes::TableAlias.new(ord.union(sfo), 't1').to_sql}").must_equal [@ord, @sfo]
+        Flight.find_by_sql("SELECT * FROM #{ord.union(sfo).to_sql} AS subquery").must_equal [@ord, @sfo]
       end
         
       it "builds successful cohorts" do
         ord = model.cohort(:dest => 'ORD').project(Arel.star)
         sfo = model.cohort(:dest => 'SFO').project(Arel.star)
-        Flight.find_by_sql("SELECT * FROM #{Arel::Nodes::TableAlias.new(ord.union(sfo), 't1').to_sql}").must_equal [@ord, @sfo]
+        Flight.find_by_sql("SELECT * FROM #{ord.union(sfo).to_sql} AS subquery").must_equal [@ord, @sfo]
 
         msn = model.cohort(:origin => 'LAX', :dest => 'MSN').project(Arel.star)
         lhr = model.cohort(:origin => 'LAX', :dest => 'LHR').project(Arel.star)
-        Flight.find_by_sql("SELECT * FROM #{Arel::Nodes::TableAlias.new(msn.union(lhr), 't1').to_sql}").must_equal [@ord, @sfo]
+        Flight.find_by_sql("SELECT * FROM #{msn.union(lhr).to_sql} AS subquery").must_equal [@ord, @sfo]
       end
 
       it "doesn't somehow create unions with false positives" do
         msn = model.cohort(:dest => 'MSN').project(Arel.star)
         lhr = model.cohort(:dest => 'LHR').project(Arel.star)
-        count = ActiveRecord::Base.connection.select_value("SELECT COUNT(*) FROM #{Arel::Nodes::TableAlias.new(msn.union(lhr), 't1').to_sql}")
+        count = ActiveRecord::Base.connection.select_value("SELECT COUNT(*) FROM #{msn.union(lhr).to_sql} AS subquery")
         flunk "count was nil" if count.nil?
         count.to_i.must_equal 0
       end
@@ -258,7 +258,7 @@ shared_examples_for 'an adapter the provides #cohort' do
       it "builds unions where only one side has rows" do
         msn = model.cohort(:dest => 'MSN').project(Arel.star)
         ord = model.cohort(:dest => 'ORD').project(Arel.star)
-        Flight.find_by_sql("SELECT * FROM #{Arel::Nodes::TableAlias.new(msn.union(ord), 't1').to_sql}").must_equal [@ord]
+        Flight.find_by_sql("SELECT * FROM #{msn.union(ord).to_sql} AS subquery").must_equal [@ord]
       end
     end
 
